--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="FOOFEST Official Website">
       <meta name="keywords" content="FooFest, Festival, Music, Tickets, Camping">
   <meta name="author" content="Jonathan Weldon, Victor Ly og Rebecca Schütze">
-<!--     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="preload"
@@ -15,12 +15,9 @@
       rel="stylesheet"
       onload="this.onload=null;this.rel='stylesheet'"
     />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link  rel="preload" href="https://fonts.googleapis.com/css2?family=Aguafina+Script&display=swap" as="stylesheet" onload="this.onload=null;this.rel='stylesheet'"> -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="prefetch" href="https://fonts.googleapis.com/css2?family=Aguafina+Script&family=Poppins:wght@400;500;700;900&display=swap"   onload="this.onload=null;this.rel='stylesheet'">  
+
+<link href="https://fonts.googleapis.com/css2?family=Aguafina+Script&display=swap" rel="stylesheet">
+  
 <title>FOOFEST</title>
   </head>
   <body>
