--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link
       rel="preload"
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
+      as="style"
       onload="this.onload=null;this.rel='stylesheet'"
     />
 
