--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       onload="this.onload=null;this.rel='stylesheet'"
     />
 
-<link href="https://fonts.googleapis.com/css2?family=Aguafina+Script&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Aguafina+Script&display=swap" rel="stylesheet"  onload="this.onload=null;this.rel='stylesheet'">
   
 <title>FOOFEST</title>
   </head>
